fix: button color in dark mode

--- a/src/components/single-photo/single-photo.module.css
+++ b/src/components/single-photo/single-photo.module.css
@@ -59,7 +59,7 @@
 
 .download__btn {
   appearance: none;
-  background-color: #fafbfc;
+  background-color: var(--btn-color);
   border: 1px solid var(--border-color);
   border-radius: 0.4rem;
   box-shadow: var(--shadow-sm);
@@ -78,7 +78,7 @@
 }
 
 .download__btn:hover {
-  background-color: #f3f4f6;
+  background-color: var(--btn-hover-color);
   text-decoration: none;
   transition-duration: 0.1s;
 }
